--- a/dp2/values.tex
+++ b/dp2/values.tex
@@ -21,8 +21,8 @@
 \newcommand{\FIITauthor}[0] {Lukáš Častven}
 \newcommand{\FIITsupervisor}[0] {Ing. Kristián Košťál PhD.}
 % \newcommand{\FIITevidenceNumber}[0] {TODO}
-\newcommand{\FIITdate}[0] {May 2025}
-\newcommand{\FIITdateSK}[0] {Máj 2025}
+\newcommand{\FIITdate}[0] {January 2026}
+\newcommand{\FIITdateSK}[0] {Január 2026}
 \newcommand{\FIITstudyProgram}[0] {Intelligent software systems}
 \newcommand{\FIITstudyProgramSK}[0] {Inteligentné softvérové systémy}
 \newcommand{\FIITstudyField}[0] {Computer Science}
